<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nusim</name>
    <version>0.1.2</version>
    <description>TODO</description>
    <maintainer email="alves.zach26@gmail.com">Zachary Alves</maintainer>
    <license>Apache-2.0</license>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>ros2launch</exec_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>rclcpp</depend>
    <depend>turtlelib</depend>
    <depend>nuturtle_description</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
